🐞 fix: 修复修复变量名与含义不符 qps/QPM

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 secretID=114514
 secretKey=114514
-ip_qps=500000000
+ip_QPM=500000000
 cdn_domain=114514.com
-qps=50000000
-max_qps=500000000
+QPM=50000000
+max_QPM=500000000
 max_traffic=1024
